--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,60 @@
 <html>
 <head>
   <title>Myapp</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
+
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Wubba Duckies</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Ducks Here <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Photos Of Ducks?</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Duck Porn?</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Duck Or Chicken?</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link to a duck</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chickens <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Duck masks</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Duck costumes</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!--end navbar-collapse -->
+  </div><!--end container-fluid -->
+</nav><!-- end navbar -->
 
 <%= yield %>
 
+<footer> &copy; 2016 The Glabes </footer>
 </body>
 </html>
