--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,15 +25,15 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="/static_pages/index">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="/static_pages/about">About</a></li>
+        <li><a href="/static_pages/contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Ducks Here <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Duck products Here <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Photos Of Ducks?</a></li>
+            <li><a href="/products">Products</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Duck Porn?</a></li>
+            <li><a href="#">Pictures of Ducks?</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Duck Or Chicken?</a></li>
           </ul>
