added color and price to products ALSO added photos and styles to products

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -13,9 +13,11 @@
 }
 
 
+#product-photo {
+	margin: 0 auto;
+}
 
-h1 {
-
-	margin: 80px;
+.jumbotron {
+	font-family: "Times New Roman", Times, serif;
 }
 
