added color and price to products ALSO added photos and styles to products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,6 @@
   <h1>Wubba Duckie Products</h1>
 </div>
 
-
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
@@ -14,7 +13,7 @@
         <p><%= product.description %></p>
         <p><%= product.color %></p>
         <p><%= product.price %></p>
-      </div><!-- /col -->
+      </div><
     <% end %>
   </div>
 </div>
