--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
         <p><%= product.description %></p>
         <p><%= product.color %></p>
         <p><%= product.price %></p>
-      </div><
+      </div>
     <% end %>
   </div>
 </div>
