--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/static_pages/index">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="/static_pages/index">Home</a></li>
         <li><a href="/static_pages/about">About</a></li>
         <li><a href="/static_pages/contact">Contact</a></li>
         <li class="dropdown">
