--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,34 +12,21 @@
         <h1><%= product.name %></h1>
         <p><%= product.description %></p>
         <p><%= product.color %></p>
-        <p><%= product.price %></p>
+        <p>$<%= product.price %></p>
       </div>
     <% end %>
   </div>
 </div>
 
-<table class="container-fluid" id="table-style">
-   <thead>
-     <tr>
-       <th>Name</th>
-       <th>Description</th>
-       <th>Image url</th>
-       <th colspan="3"></th>
-     </tr>
-   </thead>
-   <tbody>
-     <% @products.each do |product| %>
-       <tr>
-         <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-       <td><%= link_to 'Show', product %></td>
-       <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+
+      <% @products.each do |product| %>
+         <%= product.name %>
+          <%= link_to 'Show', product %>
+       <%= link_to 'Edit', edit_product_path(product) %>
+        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      
     <% end %>
-  </tbody>
- </table>
+ 
 
 <%= link_to 'New Product', new_product_path %>
 
