added controllers, routes and views for featured products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Wubba Duckies</a>
+      <a class="navbar-brand" href="/">Wubba Duckies</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -33,14 +33,14 @@
           <ul class="dropdown-menu">
             <li><a href="/products">Products</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Pictures of Ducks?</a></li>
+            <li><a href="/">Featured Duck?</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Duck Or Chicken?</a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link to a duck</a></li>
+        <li><a href="/orders">Place an Order</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chickens <span class="caret"></span></a>
           <ul class="dropdown-menu">
