--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,22 +14,18 @@
         <p><%= product.description %></p>
         <p><%= product.color %></p>
         <p>$<%= product.price %></p>
+        <p><%= link_to 'Show', product %></p>
+        <p><%= link_to 'Edit', edit_product_path(product) %></p>
+        <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
       </div>
     <% end %>
   </div>
 </div>
 
 
-      <% @products.each do |product| %>
-         <%= product.name %>
-          <%= link_to 'Show', product %>
-       <%= link_to 'Edit', edit_product_path(product) %>
-        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-      
-    <% end %>
  
 
 <%= link_to 'New Product', new_product_path %>
 
 
-  
+  <%#= render @products %>
