done a bit of styling and added partials

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -15,7 +15,13 @@
 
 #product-photo {
 	margin: 0 auto;
+	/*border: inset;*/
 }
+
+/*#product-info {
+	border: inset;
+	background-color: green;
+}*/
 
 .jumbotron {
 	font-family: "Times New Roman", Times, serif;
