--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
 	<div class="container-fluid">
+		<%= image_tag("rubber4.jpg", class: "img-responsive", id: "rubber4") %>
 		<h1>Questions, eh?</h1>
 		<h2>Well, We might or might not make wubba duckies here.</h2>
 		<h3>The company's background is rather sketchy when it comes to all things wubba so don't go diggin I tells ya.</h3>
 		<h4>All I can tell you is that they could be chickens disguised as ducks.</h4>
 	</div>
 </div>
-<%= image_tag("chick.jpg", class: "img-responsive", id: "chick") %>
