--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,15 @@
-<p id="notice"><%= notice %></p>
-
-
+   
 <div class="jumbotron">
   <h1>Wubba Duckie Products</h1>
 </div>
 
 <div class="container-fluid">
   <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4">
-      <%= image_tag(product.image_url, class: "img-responsive", id: "product-photo") %>
-        <h1><%= product.name %></h1>
-        <p><%= product.description %></p>
-        <p><%= product.color %></p>
-        <p>$<%= product.price %></p>
-        <p><%= link_to 'Show', product %></p>
-        <p><%= link_to 'Edit', edit_product_path(product) %></p>
-        <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      </div>
-    <% end %>
+    <%= render @products %>
+    <p><button type="button" class="btn btn-success"><%= link_to 'New Product', new_product_path %></button></p>
   </div>
 </div>
 
 
- 
-
-<%= link_to 'New Product', new_product_path %>
-
-
-  <%#= render @products %>
+<p id="notice"><%= notice %></p>
+  
