--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,11 @@
  
-
 <div class="jumbotron">
 	<div class="container-fluid">
+	<%= image_tag("rubber1.jpg", class: "img-responsive", id: "rubber1") %>
 		<h1>Welcome to Wubba Duckies</h1>
 		<h2>Need a wubba duck to go with your bubble bath? We got em! ***</h2>
 		<p>***Or we might not. </p>
 	</div>
 </div>
-<%= image_tag("wubba1.jpg", class: "img-responsive", id: "wubba1") %>
 <%# text_variable %>
 <%#= text_variable %>
