--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
  
-<div class="col-sm-2 col-md-4" id="product-info">
-	<%= image_tag(product.image_url, class: "img-responsive", id: "product-photo") %>
+<div class="col-sm-2 col-md-4">
+	<%= image_tag(product.image_url, class: "img-responsive", id: "product-photos") %>
 	<h1><%= product.name %></h1>
 	<p><%= product.description %></p>
 	<p><%= product.color %></p>
