--- a/app/views/static_pages/_landing_page.html.erb
+++ b/app/views/static_pages/_landing_page.html.erb
@@ -1,6 +1,6 @@
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-md-offset-3">
-	<%= image_tag(@featured_product.image_url, class: "img-responsive", id: "product-photo") %>
+ 
+<div class="col-md-12 col-sm-12" id="batduck">
+	<%= image_tag(@featured_product.image_url, class: "img-responsive", id: "product-photos") %>
 	<p><%= @featured_product.name %></p>
 	<p><%= @featured_product.description %></p>
 	<p><%= @featured_product.color %></p>
