--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron">
-	<div class="container-fluid">
+<div class="container-fluid">
+	<div class="jumbotron" id="about-header">
 		<%= image_tag("rubber4.jpg", class: "img-responsive", id: "rubber4") %>
 		<h1>Questions, eh?</h1>
 		<h2>Well, We might or might not make wubba duckies here.</h2>
