--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,27 +3,25 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-#table-style th, td {
+/*#table-style th, td {
 
 	height: 100px;
 	border: inset;
 	font-family: "Times New Roman", Times, serif;
 	padding: 20px;
 	background-color: #a3a375;
-}
-
-
-#product-photo {
-	margin: 0 auto;
-	/*border: inset;*/
-}
-
-/*#product-info {
-	border: inset;
-	background-color: green;
 }*/
+
+
+#product-photos {
+	margin: 0 auto;
+}
+
+ 
 
 .jumbotron {
 	font-family: "Times New Roman", Times, serif;
+	background-color: #ffff99;
+	max-width: 100%;
 }
 
