--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,7 @@
-   
-<div class="jumbotron">
-  <h1>Wubba Duckie Products</h1>
+<div class="container-fluid">   
+	<div class="jumbotron">
+	  <h1>Wubba Duckie Products</h1>
+	</div>
 </div>
 
 <div class="container-fluid">
@@ -12,4 +13,4 @@
 
 
 <p id="notice"><%= notice %></p>
-  
+   
