--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
-<div class="jumbotron">
-	<div class="container-fluid">
-	<%= image_tag("rubber2.jpg", class: "img-responsive", id: "rubber2") %>
+
+<div class="container-fluid">
+	<div class="jumbotron" id="contact-header">
+		<%= image_tag("rubber2.jpg", class: "img-responsive", id: "rubber2") %>
 		<h1> Where to Find us?</h1>
 		<h2>We were once located on a giant farm, near a coop..I mean, duck pond, yeah..duck pond, a couple of years back.</h2>
 		<h3>Now...oh..now? One of them big ol' factories. Couple'a badasses on the doors. <br>Packing.</br></h3>
