--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,4 @@
-<div class="jumbotron">
-	<h1>Featured Wubba Duckie:</h1>
-	<h3>Every month we feature a new Wubba one, just for you!</h3>
-<!-- </div> -->
+
   <div class="container-fluid" id="featured-carousel">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -14,7 +11,7 @@
       <div class="carousel-inner" role="listbox">
         <% @products.each do |product| %>
       	<div class="item<%= " active" if product == @products.first %>">
-          <%= image_tag(product.image_url, class: "img-responsive", id: "product-photo") %>
+          <%= image_tag(product.image_url, class: "img-responsive", id: "product-photos") %>
         	<div class="carousel-caption">
             <h2><%= product.name %></h2>
           </div>
@@ -33,13 +30,19 @@
     </div>
   </div>
 </div>
-
 <div class="container-fluid">
-  <div class="jumbotron">
+  <div class="jumbotron" id="featured-header">
+    <h1>Featured Wubba Duckie:</h1> 
+    <h3>Every month we feature a new Wubba one, just for you!</h3>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="featured-header-h1">
     <h1>This month we are proud to feature:</h1>
   </div>
-  <div class="row">
+  <div class="row" id="batduck">
 	 <%= render @featured_product %>
   </div>
 </div>
+
 
