--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -40,9 +40,11 @@
   <div class="featured-header-h1">
     <h1>This month we are proud to feature:</h1>
   </div>
-  <div class="row" id="batduck">
-	 <%= render @featured_product %>
-  </div>
 </div>
+  <div class="container-fluid">
+    <div class="row" id="batduck">
+	     <%= render @featured_product %>
+    </div>
+  </div>
 
 
