--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -41,10 +41,11 @@
     <h1>This month we are proud to feature:</h1>
   </div>
 </div>
-  <div class="container-fluid">
-    <div class="row" id="batduck">
+  <div class="container-fluid" id="featured-product">
+    <div class="row">
 	     <%= render @featured_product %>
     </div>
   </div>
 
-
+<%#= params[:example_key] %>
+<%#= params[:example_key].to_i * 10 %>
