--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -17,7 +17,6 @@
 	margin: 0 auto;
 }
 
- 
 
 .jumbotron {
 	font-family: "Times New Roman", Times, serif;
@@ -25,3 +24,7 @@
 	max-width: 100%;
 }
 
+#product-form {
+	text-align: center;
+	padding-top: 30px;
+}
