--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,15 @@
           </ul>
         </li>
       </ul>
+      <div class="navbar-form navbar-right">
+        <div class="form-group">
+          <%= form_tag("/products", method: "get") do %>
+          <%= label_tag(:q, "Search for:") %>
+          <%= text_field_tag(:q) %>
+          <%= submit_tag("Search") %>
+          <% end %>
+        </div>
+      </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Place and Order", orders_path %></li>
         <li class="dropdown">
