--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,28 +11,30 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div class="container-fluid" id=product-form>
+  <div class="form-group col-md-12">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
+  <div class="form-group col-md-12">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
-  <div class="field">
+  <div class="form-group col-md-12">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
-  <div class="field">
+  <div class="form-group col-md-12">
   <%= f.label :color %><br>
   <%= f.text_field :color %>
   </div>
-  <div class="field">
+  <div class="form-group col-md-12">
   <%= f.label :price %><br>
   <%= f.text_field :price %>
   </div>
-  <div class="actions">
+  <div class="actions col-md-12">
     <%= f.submit %>
   </div>
+</div>
   
 <% end %>
