--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Product</h1>
+
+<div class="container-fluid" id=product-form>
+	<h1>New Product</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', products_path %>
+
+</div>
