fixed featured product page styles, created comment form in contact and set up sendgrid in heroku

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+ 
 
 /*#table-style th, td {
 
@@ -19,10 +19,12 @@
 
 
 .jumbotron {
+	/*font-family: 'Amatic SC', cursive;*/
 	font-family: "Times New Roman", Times, serif;
 	background-color: #ffff99;
 	max-width: 100%;
 }
+
 
 #product-form {
 	text-align: center;
