--- a/app/views/static_pages/_landing_page.html.erb
+++ b/app/views/static_pages/_landing_page.html.erb
@@ -1,6 +1,6 @@
  
 <div class="container-fluid" id="featured-product">
-	<div class="col-md-4-offset-4">
+	<div class="col-md-4">
 		<%= image_tag(@featured_product.image_url, class: "img-responsive", id: "product-photos") %>
 		<p><%= @featured_product.name %></p>
 		<p><%= @featured_product.description %></p>
