--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -6,4 +6,28 @@
 		<h2>We were once located on a giant farm, near a coop..I mean, duck pond, yeah..duck pond, a couple of years back.</h2>
 		<h3>Now...oh..now? One of them big ol' factories. Couple'a badasses on the doors. <br>Packing.</br></h3>
 	</div>
+	<h1>Go on..Dares ya! Contact Us.</h1>
+		<%= flash[:notice] %>
+		<%= form_tag("/static_pages/thank_you") do %>
 </div>
+<div class="container-fluid" id="contact-form">
+	<div class="row">
+	  <div class="col-md-4 col-md-offset-4">
+	    <div class="form-group">
+	      <%= label_tag :name, "Name" %>
+	      <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+	    </div>      
+	    <div class="form-group">
+	      <%= label_tag :email, "Email Address" %>
+	      <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+	    </div>
+	    <div class="form-group">
+	      <%= label_tag :message, "Message" %>
+	      <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+	    </div>      
+			<%= submit_tag "Send" %>   
+			<% end %>
+	 	</div>
+	</div>
+</div>
+
