--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,15 +49,8 @@
         </div>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Place and Order", orders_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chickens <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Duck masks</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Duck costumes</a></li>
-          </ul>
-        </li>
+      <li><a href="#">Sign In</a></li>
+        <li><%= link_to "Place an Order", orders_path %></li>
       </ul>
     </div><!--end navbar-collapse -->
   </div><!--end container-fluid -->
