--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,22 +39,32 @@
           </ul>
         </li>
       </ul>
-      <div class="navbar-form navbar-right">
-        <div class="form-group">
-          <%= form_tag("/products", method: "get") do %>
-          <%= label_tag(:q, "Search for:") %>
-          <%= text_field_tag(:q) %>
-          <%= submit_tag("Search") %>
-          <% end %>
-        </div>
-      </div>
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Sign In</a></li>
+        <div class="navbar-form navbar-right">
+          <div class="form-group">
+            <%= form_tag("/products", method: "get") do %>
+            <%= label_tag(:q, "Search for:") %>
+            <%= text_field_tag(:q) %>
+            <%= submit_tag("Search") %>
+            <% end %>
+          </div>
+        </div>
+        <li>
+          <% if user_signed_in? %>
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+          <% else %>
+          <%= link_to('Login', new_user_session_path) %>
+          <% end %>
+        </li>
         <li><%= link_to "Place an Order", orders_path %></li>
       </ul>
     </div><!--end navbar-collapse -->
   </div><!--end container-fluid -->
 </nav><!-- end navbar -->
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
 
 <%= yield %>
  
