changed alert and notice styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,8 +63,8 @@
 </nav><!-- end navbar -->
 
 <% if notice %>
-  <div class="alert alert-danger" id="notice" role="alert">
-    <h1>HOLD IT BUD!</h1>
+  <div class="alert alert-success" id="notice" role="alert">
+    <h1>GOOD STUFF!</h1>
     <p><%= notice %></p>
   </div>
 <% end %>
