--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,33 +1,26 @@
 
 <div class="container-fluid" id=product-form>
-
-  <p id="notice"><%= notice %></p>
-
+  <p>
+  <%= image_tag(@product.image_url) %>
+  </p>
   <p>
     <strong>Name:</strong>
     <%= @product.name %>
   </p>
-
   <p>
     <strong>Description:</strong>
     <%= @product.description %>
   </p>
-
-  <p>
-    <strong>Image url:</strong>
-    <%= @product.image_url %>
-  </p>
-
   <p>
   	<strong>Color:</strong>
   	<%= @product.color %>
   </p>
-
   <p>
   	<strong>Price:</strong>
   	<%= @product.price %>
   </p>
-
-  <%= link_to 'Edit', edit_product_path(@product) %> |
-  <%= link_to 'Back', products_path %>
+    <%= link_to 'Edit', edit_product_path(@product) %> |
+    <%= link_to 'Back', products_path %>
 </div>
+
+<p id="notice"><%= notice %></p>
