--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">   
-	<div class="jumbotron">
+	<div class="jumbotron" id="product-jumbotron-header">
 	  <h1>Wubba Duckie Products</h1>
 	</div>
 </div>
