--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,28 +1,44 @@
 
-<div class="container-fluid" id=product-form>
-  <p>
-  <%= image_tag(@product.image_url) %>
-  </p>
-  <p>
-    <strong>Name:</strong>
-    <%= @product.name %>
-  </p>
-  <p>
-    <strong>Description:</strong>
-    <%= @product.description %>
-  </p>
-  <p>
-  	<strong>Color:</strong>
-  	<%= @product.color %>
-  </p>
-  <p>
-  	<strong>Price:</strong>
-  	<%= @product.price %>
-  </p>
-    <%= link_to 'Edit', edit_product_path(@product) %> |
-    <%= link_to 'Back', products_path %>
+<div class="container-fluid" id=comments-descripton>
+  <div class="row" id="comments-row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-3">
+      <p>
+        <%= image_tag(@product.image_url) %>
+      </p>
+      <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+      <p>
+        <strong>Name:</strong>
+        <%= @product.name %>
+      </p>
+      <p>
+        <strong>Description:</strong>
+        <%= @product.description %>
+      </p>
+      <p>
+      	<strong>Color:</strong>
+      	<%= @product.color %>
+      </p>
+      <p>
+      	<strong>Price:</strong>
+      	$<%= @product.price %>
+      </p>
+        <p><%= link_to 'Edit', edit_product_path(@product) %> |
+        <%= link_to 'Back', products_path %></p>
+
+    </div>
+    <div class="col-md-3">
+      <div class="comments">
+        <%= render 'comments' %>
+        <%= render 'new_comment' %>
+      </div>
+    <div class="col-md-3">
+  </div>
+  <p id="notice"><%= notice %></p>
+</div>
+</div>
 </div>
 
-<p id="notice"><%= notice %></p>
-<%#= render 'products/new_comment' %>
-<%#= render 'comments' %>
+
+
