--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -3,9 +3,12 @@
     <% @comments.each do |comment| %>
         <div class="row">
             <hr>
-            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+            <% if signed_in? && current_user.admin? %>
+            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small> | <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(@product, comment), method: :delete, data: { confirm: 'This will delete your comment. Are you sure? There is no going back.' } %></p>
+            <% end %>
             <!-- <p><%#= "Rating: #{comment.rating}/5" %></p> -->
             <div class="rated" data-score="<%= comment.rating %>"></div>
+            <p></p>
             <p><%= comment.body %></p>
         </div>
     <% end %>
