--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,9 @@
 <div class="container-fluid">
   <div class="row">
     <%= render @products %>
+    <% if signed_in? && current_user.admin? %>
     <p><button type="button" class="btn btn-success"><%= link_to 'New Product', new_product_path %></button></p>
+    <% end %>
   </div>
 </div>
 
