--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,8 +24,10 @@
       	<strong>Price:</strong>
       	$<%= @product.price %>
       </p>
-        <p><%= link_to 'Edit', edit_product_path(@product) %> |
-        <%= link_to 'Back', products_path %></p>
+      <% if signed_in? && current_user.admin? %>
+        <p><%= link_to 'Edit', edit_product_path(@product) %></p>
+      <% end %>
+        <p><%= link_to '| Back |', products_path %></p>
 
     </div>
     <div class="col-md-3">
