--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,12 @@
       	<strong>Price:</strong>
       	$<%= @product.price %>
       </p>
+      
+      <%= form_tag "/payments/create" do %>
+      <p>
+          <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </p>
       <% if signed_in? && current_user.admin? %>
         <p><%= link_to 'Edit', edit_product_path(@product) %></p>
       <% end %>
