fixed payment and orders issue

--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,3 +1,6 @@
 
-    <h2>>Thank you for your purchase.</h2>
+    <h2>Thank you for your purchase.</h2>
     <%= button_to 'Back to Products', products_path, :method => "get", :class => "btn btn-info" %>
+    <p>OR</p>
+    <%= button_to 'Home', static_pages_index_url, :method => "get", :class => "btn btn-info" %>
+
