--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-3">
       <p>
-        <%= image_tag(@product.image_url) %>
+        <%= image_tag(@product.image_url, class: "img-zoom", data_zoom_image: "@product.image_url") %>
       </p>
       <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
       <p>
