--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,7 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
  
-
+#new_comment {
+  text-align: center;
+}
 
 #product-photos {
 	margin: 0 auto;
