--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,8 +6,10 @@
 
 <div class="container-fluid">
   <div class="row">
+	<% cache (cache_key_for_products) do %>
     <%= render @products %>
-    <% if signed_in? && current_user.admin? %>
+	<% end %>
+  	<% if signed_in? && current_user.admin? %>
     <p><button type="button" class="btn btn-success"><%= link_to 'New Product', new_product_path %></button></p>
     <% end %>
   </div>
