--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,14 +1,12 @@
  
 
 <div class="container-fluid">
-	<div class="jumbotron" id="home-header">
-		<h1>Welcome to Wubba Duckies</h1>
+	<div class="home" id="home-header">
+		<%= image_tag("rubber1.jpg", class: "img-responsive", id: "rubber1") %>
+		<h1>Wubba Duckies</h1>
+		<h2>Need a wubba duck for your bubble bath? We got em!*</h2>
+		<p>***Or we might not. </p>
 	</div>
-</div>
-<div class="container-fluid">
-	<%= image_tag("rubber1.jpg", class: "img-responsive", id: "rubber1") %>
-	<h2>Need a wubba duck to go with your bubble bath? We got em! ***</h2>
-	<p>***Or we might not. </p>
 </div>
 <%# text_variable %>
 <%#= text_variable %>
