--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,58 +1,57 @@
 
-  <div class="container-fluid" id="featured-carousel">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-    <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <% @products.each do |product| %>
-      	<div class="item<%= " active" if product == @products.first %>">
-          <%= image_tag(product.image_url, class: "img-responsive", id: "product-photos") %>
-        	<div class="carousel-caption">
-            <h2><%= product.name %></h2>
-          </div>
+
+<div class="container-fluid">
+  <div class="jumbotron" id="featured-header">
+    <h1>Featured Wubba Duckie:</h1> 
+    <h3>Every month we feature a new Wubba one, just for you!</h3>
+  </div>
+</div>
+
+<div class="container-fluid" id="featured-carousel">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+  <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <% @products.each do |product| %>
+      <div class="item<%= " active" if product == @products.first %>">
+        <%= image_tag(product.image_url, class: "img-responsive", id: "product-photos") %>
+        <div class="carousel-caption">
+          <h2><%= product.name %></h2>
         </div>
-        <% end %>
       </div>
-    <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <% end %>
+    </div>
+  <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<div class="container-fluid" id="featured-product">
+  <div class="featured-header-month">
+    <h2>This month we are proud to feature:</h2>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+    </div>
+
+    <%= render @featured_product %>
+    
+    <div class="col-md-4">
     </div>
   </div>
-
-  <div class="container-fluid">
-    <div class="jumbotron" id="featured-header">
-      <h1>Featured Wubba Duckie:</h1> 
-      <h3>Every month we feature a new Wubba one, just for you!</h3>
-    </div>
-  </div>
-
-  <div class="container-fluid" id="featured-product">
-    <div class="featured-header-h1">
-      <h1>This month we are proud to feature:</h1>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <%#= image_tag("rsz_featured2.jpg", class: "img-responsive", id: "thanks2-img") %>
-      </div>
-
-      <%= render @featured_product %>
-      
-      <div class="col-md-4">
-          <%#= image_tag("rsz_featured3.jpg", class: "img-responsive", id: "thanks2-img") %>
-      </div>
-    </div>
-  </div>
+</div>
 
 
 <%#= params[:example_key] %>
