--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
  
 <div class="col-sm-2 col-md-4">
-<% cache product do %>
+<%# cache product do %>
 	<%= link_to(image_tag(product.image_url, class: "img-responsive", id: "product-photos"), product) %>
 	<h1><%= product.name %></h1>
 	<p><%= product.description %></p>
@@ -11,7 +11,7 @@
 			<button type="button" class="btn btn-info"><%= link_to 'View this product', product %></button>
 			<button type="button" class="btn btn-warning"><%= link_to 'Edit', edit_product_path(product) %></button>
 			<button type="button" class="btn btn-danger"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></button>
-		<% end %>
+		<%# end %>
 	</p> 
 <% end %>
 </div>
