--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,10 @@
-<div class="jumbotron">
+<div class="orders-header">
 	<h1>Need a Wubba one, for fun?</h1>
 	<h2> Place an order now!</h2>
 </div>
 <!-- <input type="text" placeholder="Your name" ng-model="name">
 {{ 42 / 6 }} -->
-
+ 
 <div ng-controller="OrdersCtrl">
 	<h1>Orders</h1>
 <!-- {{name}} -->
