--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,20 +6,22 @@
 {{ 42 / 6 }} -->
  
 <div ng-controller="OrdersCtrl">
-	<h1>Orders</h1>
+	<h3>Orders</h3>
 <!-- {{name}} -->
 <!-- {{orders}} -->
-	<form class="form-inline" ng-submit="addOrder ()">
+	<form class="form-inline" ng-submit="addOrder()">
 		<strong>Add order: </strong>
 		<!-- <input type="hidden" value="{{orders[orders.length - 1].id + 1 }}" ng-model="newOrder.id"> -->
 		<select ng-model="newOrder.product_id" class="form-control">
 			<option value="" disabled selected>Select a product</option>
 			<option ng-repeat="product in products" value="{{product.id}}">{{product.name}}</option>
 		</select>
-    	<input type="number" step="0.01" class="form-control" placeholder="Total" ng-model="newOrder.total">
-    	<input type="number" class="form-control" ng-model="newOrder.product.id">
-    	
-    	<input type="submit" value="+" class="btn btn-success">
+    	<input type="number" class="form-control" placeholder="Total" ng-model="newOrder.total">
+    	<!-- <input type="number" class="form-control" ng-model="newOrder.product.id"> -->
+    	<input type="submit" value="Add Order" class="btn btn-success">
+    		<div ng-show='error'>
+    			<p>You're missing something. Please fill in all forms to complete order!</p>
+    		</div>
   	</form>
 
 
@@ -42,7 +44,9 @@
 	  		<small ng-show="order.user_id"><br>-{{order.user.email}}</small>
 	  	</td>
 	  	<td>
-  			<button ng-click="deleteOrder(order)" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+	  		<% if signed_in? && current_user.admin? %>
+  				<button ng-click="deleteOrder(order)" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+  			<% end %>
 		</td>
 	  	<!--later fill up -->
 	  </tr>
