trying to fix nav search on heroku

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -33,6 +33,7 @@ body {
  /*NAV BAR CUSTOM STYLE*/
 .navbar-custom {
 	background-color: #191919;
+  position: absolute;
     /*background-color: #FFF056;*/
 }
 
