Added instruction to view and purchase products on product page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">   
 	<div class="jumbotron" id="product-jumbotron-header">
 	  <h1>Wubba Duckie Products</h1>
+    <h2>Click a product to view reviews and purchase</h2>
 	</div>
 </div>
 
