--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -3,9 +3,9 @@
   <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
     <p>
       <%= f.label :body, "Comments" %><br>
-      <%= f.text_area :body %>
+      <%= f.text_area :body, :required => true %>
     </p>
-    <p>
+    <p>Rate me with Stars!
     <div class="rating"></div>
     </p>  
     <p>
