fixing stripe on heroku

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,6 +29,7 @@
       <p>
           <%= render partial: "shared/stripe_checkout_button" %>
           <%#= hidden_field_tag(:product_id) %>
+          <%= hidden_field_tag(:product_id, @product.id) %>
         <% end %>
       </p>
 
