fixed stripe by finding space issue in heroku var

--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,7 +1,7 @@
 
     <h2>Thank you for your purchase.</h2>
-    <%= button_to 'Back to Products', products_path, :method => "get", :class => "btn btn-info" %>
+    <h1><%= button_to 'Back to Products', products_path, :method => "get", :class => "btn btn-info" %></h1>
     <p>OR</p>
-    <%= button_to 'Home', static_pages_index_url, :method => "get", :class => "btn btn-info" %>
+    <h1><%= button_to 'Home', static_pages_index_url, :method => "get", :class => "btn btn-info" %></h1>
 
  
